--- a/WH_Capacity/app/config/services.yml
+++ b/WH_Capacity/app/config/services.yml
@@ -33,3 +33,8 @@ services:
     # AppBundle\Service\ExampleService:
     #     arguments:
     #         $someArgument: 'some_value'
+
+    AppBundle\Repository\SalesOrderRepository:
+      factory: ["@doctrine.orm.entity_manager", getRepository]
+      arguments:
+              - AppBundle\Entity\SalesOrder
